--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div>
     <fieldset class="fieldset">
       <h1>INFORMATION TECHNOLOGY DEPARTMENT</h1>
-      <form name="myform" method="post" action="https://www.javatpoint.com/javascriptpages/valid.jsp" onsubmit="return validateForm()">
+      <form name="myform" action="https://www.javatpoint.com/javascriptpages/valid.jsp" onsubmit="return validateForm()">
         Name:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" name="name">
         <br>
         <br>
